add give/get mode option, mock give access management
also rename 'oauth-credentials' message to 'gtalk-credentials' (accompanies
UWNetworksLab/uproxy-common@7b1cf165)

--- a/chrome/extension/src/_locales/en/messages.json
+++ b/chrome/extension/src/_locales/en/messages.json
@@ -7,6 +7,22 @@
     "message": "UProxy",
     "description": "The description of the extension"
   },
+  "giveAccess": {
+    "message": "Give Access",
+    "description": "Button label"
+  },
+  "getAccess": {
+    "message": "Get Access",
+    "description": "Button label"
+  },
+  "accept": {
+    "message": "Accept",
+    "description": "Button label"
+  },
+  "decline": {
+    "message": "Decline",
+    "description": "Button label"
+  },
   "options": {
     "message": "Options",
     "description": "Header for the options page"
