code + style improvements, add option button
move application-wide logic from popup.js into app.js

--- a/chrome/extension/src/_locales/en/messages.json
+++ b/chrome/extension/src/_locales/en/messages.json
@@ -24,7 +24,7 @@
     "description": "Button label"
   },
   "options": {
-    "message": "Options",
+    "message": "UProxy Options",
     "description": "Header for the options page"
   },
   "advanced": {
