--- a/src/chrome/extension/_locales/en/messages.json
+++ b/src/chrome/extension/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
     "message": "uProxy Extension",
-    "description": "(Alpha version: do not use for real!) The title that appears in the Chrome Extensions listing"
+    "description": "The title that appears in the Chrome Extensions listing"
   },
   "appDescription": {
-    "message": "Provides the user-interface for the uProxy Chrome App",
+    "message": "(Alpha version: do not use for real!) Provides the user-interface for the uProxy Core App. You need to also have installed the  the uProxy Core App to use uProxy.",
     "description": "The description that appears in the Chrome Extensions listing"
   },
   "giveAccess": {
