Fix Arabic translation of SOCKS (not stockings).

--- a/samples/copypaste-socks-chromeapp/locales/ar/messages.json
+++ b/samples/copypaste-socks-chromeapp/locales/ar/messages.json
@@ -1,6 +1,6 @@
 {
   "intro" : {
-    "message" : "هذه عينة التطبيق يحدد الجوارب إنشاء الوكلاء بين اثنين من المستخدمين. تبادل الرسائل الأولي يشير يحدث يدويا (على سبيل المثال، عبر البريد الإلكتروني أو الدردشة)، بينما يستخدم إنشاء الوكلاء لاحق متوافق مع WebRTC."
+    "message" : "این برنامه نمونه وکالتی SOCKS بین دو کاربران برقرار می کند. تبادل اولیه از پیام های سیگنالینگ دستی رخ می دهد (به عنوان مثال، از طریق ایمیل یا چت)، در حالی که پس از آن با استفاده از وکالتی WebRTC فعال میکند."
   },
   "useCrypto" : {
     "message" : "استخدام التشفير لتوقيع / تبادل تشفير؟"
@@ -84,7 +84,7 @@
     "message" : "وضع مشاركة: توقف"
   },
   "proxyEndpoint" : {
-    "message" : " الجوارب وكيل الإصغاء"
+    "message" : "SOCKS الوكيل يتم الإصغاء "
   },
   "proxyEndpointUsageExample" : {
     "message" : "الاستخدام سبيل المثال:"
