--- a/src/generic_ui/locales/en/messages.json
+++ b/src/generic_ui/locales/en/messages.json
@@ -623,7 +623,7 @@
     "description": "Shown in Chrome if the user has not finished installing both parts of uProxy.",
     "message": "You're almost ready to use uProxy!"
   },
-  "extMissingText": {
+  "extMissingMessage": {
     "description": "Shown in Chrome to instruct the user to install part 1 of uProxy.",
     "message": "Download and enable part 1 of uProxy to get started."
   },
@@ -631,7 +631,7 @@
     "description": "Shown in Chrome if the user has not finished installing both parts of uProxy.",
     "message": "You're almost ready to use uProxy!"
   },
-  "appMissingText": {
+  "appMissingMessage": {
     "description": "Shown in Chrome to instruct the user to install part 2 of uProxy.",
     "message": "Download and enable part 2 of uProxy to get started."
   }
