--- a/src/generic_ui/locales/ar/messages.json
+++ b/src/generic_ui/locales/ar/messages.json
@@ -59,6 +59,10 @@
     "message": "سوف تكون قادرة على الحصول عند __name__ يقبل.",
     "description": "User will be able to access the Internet through their friend, once that friend gives the user permission."
   },
+  "cancelRequest": {
+    "message": "إلغاء الطلب",
+    "description": "Label for button which will take back a request to get Internet access through a friend."
+  },
   "offeredYouAccess": {
     "message": "لقد عرضت عليهم الوصول.",
     "description": "A friend has offered their Internet access to the user."
@@ -604,12 +608,12 @@
     "description": "Instruction to select language used by the application."
   },
   "english": {
-    "message": "English",
-    "description": "English language."
+    "description": "English language.",
+    "message": "English"
   },
   "farsi": {
-    "message": "الفارسية",
-    "description": "Farsi language."
+    "description": "Farsi language.",
+    "message": "فارسی"
   },
   "arabic": {
     "description": "Arabic language.",
