--- a/src/generic_ui/locales/ar/messages.json
+++ b/src/generic_ui/locales/ar/messages.json
@@ -423,6 +423,10 @@
     "message": "اتصال مع __network__",
     "description": "Text in settings that informs the user which social network they're connected to."
   },
+  "connectedWithNumber": {
+    "message": "اتصال مع __number__ شبكات",
+    "description": "Text in settings informing the user of how many networks they're connected to."
+  },
   "nameThisDevice": {
     "message": "اسم هذا الجهاز",
     "description": "If the user has not named their device (e.g. 'laptop' or 'home computer'), they will see this message in the Settings panel."
@@ -434,6 +438,14 @@
   "description": {
     "message": "وصف",
     "description": "Placeholder for the input field for the name of the user's device."
+  },
+  "connect": {
+    "message": "ربط",
+    "description": "User clicks this to connect to a network"
+  },
+  "disconnect": {
+    "message": "قطع",
+    "description": "User clicks this to disconnect from a network"
   },
   "save": {
     "message": "حفظ",
