--- a/src/generic_ui/locales/en/messages.json
+++ b/src/generic_ui/locales/en/messages.json
@@ -435,6 +435,10 @@
     "description": "Placeholder for the input field for the name of the user's device.",
     "message": "Description"
   },
+  "connectedAccounts": {
+    "description": "In settings, title for the social networks you can connect to.",
+    "message": "Connected Accounts"
+  },
   "connect": {
     "description": "User clicks this to connect to a network",
     "message": "Connect"
@@ -518,6 +522,14 @@
   "askToAnalyze": {
     "description": "Text in a popup that appears when an attempt to access the Internet through a friend fails.",
     "message": "It could be that your network's NAT type is incompatible with uProxy. Would you like uProxy to analyze your network?"
+  },
+  "unableToGet": {
+    "description": "Title for popup that appears when an attempt to access the Internet through a friend fails.",
+    "message": "Unable to get access"
+  },
+  "unableToShare": {
+    "description": "Title for popup that appears when an attempt to share the Internet with a friend fails.",
+    "message": "Unable to share access"
   },
   "analyzingNetwork": {
     "description": "Message shown when the user's network is being analyzed.",
