--- a/src/generic_ui/locales/en/messages.json
+++ b/src/generic_ui/locales/en/messages.json
@@ -649,10 +649,10 @@
   },
   "updateAvailable": {
     "description": "What to show the user (on the bottom bar) when an update is available.  The actual update will not be done until they restart uProxy which we will prompt them to do with a link.",
-    "message": "An update is available, please restart uProxy to update."
+    "message": "An update is available"
   },
   "restartUproxyUpdate": {
     "description": "A link the user can click on to restart uProxy and permorm an update",
-    "message": "Restart now"
+    "message": "Restart to update"
   }
 }
